fix card spacing in Firefox

--- a/source/_style/_md-cards.scss
+++ b/source/_style/_md-cards.scss
@@ -8,10 +8,13 @@
 	margin-left: auto;
 	margin-right: auto;
 }
-.card-grid > *:not(h2:first-child) {
+.card-grid > * {
   width: 100%;
   margin: 0;
   padding: 0 1rem;
+}
+.card-grid > h2:first-child {
+  padding-left: 0;
 }
 .card-grid a::before {
   content: "▹ ";
